...
                                    .setProcedureType(value.first);
                              },
                              segments: [
                                ButtonSegment(
                                  icon: Icon(Icons.add),
                                  value: ProcedureType.newAcquisition,
                                  label: Text("新規"),
                                ),
                                ButtonSegment(
                                  icon: Icon(Icons.update),
                                  value: ProcedureType.update,
                                  label: Text("更新"),
                                ),
...

                            Column(
                              crossAxisAlignment: CrossAxisAlignment.stretch,
                              children: [
                                Section(
                                  children: [
                                    const SectionHeading("手帳"),
                                    SizedBox(
                                      width: _segmentedButtonWidth,
                                      child: SegmentedButton<bool>(
                                        selected: {state.isCertType2},
                                        onSelectionChanged: (value) {
                                          ref.read(homePageProvider.notifier)
...
                                        segments: [
                                          ButtonSegment(
                                            label: Text("1種"),
                                            value: false,
                                          ),
                                          ButtonSegment(
                                            label: Text("2種"),
                                            value: true,
                                          ),
                                        ],
                                      ),
                                    ),
                                  ],
...
                                        segments: [
                                          ButtonSegment(
                                            label: Text("なし"),
                                            value: false,
                                          ),
                                          ButtonSegment(
                                            label: Text("あり"),
                                            value: true,
                                          ),
                                        ],
                                      ),
                                    ),
                                  ],
...
                                    ],
                                  ),
                                ),

                                Section(
                                  children: [
                                    SectionHeading("申請者"),
                                    SizedBox(
                                      width: _segmentedButtonWidth,
                                      child: SegmentedButton<bool>(
                                        selected: {state.isAgent},
                                        onSelectionChanged: (value) {
                                          ref.read(homePageProvider.notifier)
...
