...
    return GappedRow(
      children: [
        Flexible(
          child: DropdownButtonFormField<JapaneseEra>(
            initialValue: _era,
            decoration: const InputDecoration(
              labelText: "元号",
            ),
            items: JapaneseEra.values.map((e) {
              return DropdownMenuItem(
                value: e,
                child: Text(e.text),
              );
...
